[gd_scene load_steps=20 format=3 uid="uid://d30dvfnvwh68n"]

[ext_resource type="Script" path="res://player/player.gd" id="1_3dphx"]
[ext_resource type="PackedScene" uid="uid://dq0ggwktf3ru5" path="res://misc/big_skull.tscn" id="2_135l5"]
[ext_resource type="PackedScene" uid="uid://dgn0vfhucx72t" path="res://misc/ritual.tscn" id="3_k773t"]
[ext_resource type="Texture2D" uid="uid://b2shan3gb6x72" path="res://addons/tiny_swords/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="3_kpa6i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kpv2q"]
radius = 13.0
height = 26.0

[sub_resource type="Animation" id="Animation_nxg35"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_1bjwb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_m7btq"]
resource_name = "Run"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_x841j"]
resource_name = "attack_down_1"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_124eg"]
resource_name = "attack_down_2"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="Animation" id="Animation_qw7v3"]
resource_name = "attack_side_1"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_gdosl"]
resource_name = "attack_side_2"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_ffeo5"]
resource_name = "attack_up_1"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}

[sub_resource type="Animation" id="Animation_fik8n"]
resource_name = "attack_up_2"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qb2qm"]
_data = {
"Idle": SubResource("Animation_nxg35"),
"RESET": SubResource("Animation_1bjwb"),
"Run": SubResource("Animation_m7btq"),
"attack_down_1": SubResource("Animation_x841j"),
"attack_down_2": SubResource("Animation_124eg"),
"attack_side_1": SubResource("Animation_qw7v3"),
"attack_side_2": SubResource("Animation_gdosl"),
"attack_up_1": SubResource("Animation_ffeo5"),
"attack_up_2": SubResource("Animation_fik8n")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0up4k"]
radius = 172.073

[sub_resource type="CircleShape2D" id="CircleShape2D_yy2hw"]
radius = 88.0057

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6s40w"]
bg_color = Color(0, 0, 0, 0.360784)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gidks"]
bg_color = Color(0.699195, 2.08165e-06, 6.73831e-07, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(-1, -11)
motion_mode = 1
script = ExtResource("1_3dphx")
speed = 4.0
max_health = null
sword_damage = null
death_prefab = ExtResource("2_135l5")
ritual_damage = null
ritual_interval = null
ritual_scene = ExtResource("3_k773t")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -29)
texture = ExtResource("3_kpa6i")
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_kpv2q")
debug_color = Color(0, 0.6, 0.701961, 0.12549)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qb2qm")
}
autoplay = "Idle"

[node name="SwordArea" type="Area2D" parent="."]
position = Vector2(-25, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(25, -22)
shape = SubResource("CircleShape2D_0up4k")
debug_color = Color(0.996078, 0, 0.152941, 0)

[node name="HitBoxArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea"]
position = Vector2(1, -19)
shape = SubResource("CircleShape2D_yy2hw")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="HealthProgressBar" type="ProgressBar" parent="."]
offset_left = -24.0
offset_top = 9.0
offset_right = 26.0
offset_bottom = 16.0
theme_override_styles/background = SubResource("StyleBoxFlat_6s40w")
theme_override_styles/fill = SubResource("StyleBoxFlat_gidks")
max_value = 1024.0
value = 122.0
rounded = true
show_percentage = false
